# MarcSLM_ControlSystem

./: .gitignore  CI_CD_GUIDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_CHANGES_SUMMARY.md  COMPLETE_RTC5_FIX_SOLUTION.md  CRASH_FIXES_APPLIED.md  CRASH_FIXES_QUICK_REFERENCE_FINAL.md  CRASH_FIXES_REPORT.md  CRASH_FIX_IMPLEMENTATION_GUIDE.md  CRASH_ROOT_CAUSE_ANALYSIS.md  CRITICAL_THREAD_OWNERSHIP_FIX.md  DELIVERABLES_FINAL.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_FINAL.md  INDEX.md  INDUSTRIAL_RTC5_FIX_COMPLETE.md  LICENSE.txt  MIGRATION.md  Projects.lnk  QUICK_FIX_REFERENCE_INDUSTRIAL.md  QUICK_REFERENCE_FIX.md  QUICK_REF_THREAD_OWNERSHIP.md  README.md  README_CRASH_FIX.md  ROOT_CAUSE_ANALYSIS_AND_FIXES.md  RTC5_LIST_STATE_FIX_EXPLANATION.md  RTC5_QUICK_FIX_REFERENCE.md  RTC5_SCANNER_FIX_SUMMARY.md  RTC5_THREADING_FIXES_COMPLETE.md  SP-ICE.lib  THREAD_CRASH_FIX_COMPLETE.md  VERIFICATION_CHECKLIST.md  VISUAL_CRASH_FIX_GUIDE.md  build_installer.ps1  ci-build.bat  ci-build.ps1  (+3 more)
Femure_Build/: Femure_Build.build
Femure_Build/Config/: marc_build_styles.json
Models/: marc_build_styles.json
OPCUASimulator/: CMakeLists.txt  main.cpp  opcua_sim_server.cpp  opcua_sim_server.h
RTC5 Files/: RTC5DLL_551_VersionInfo.txt
Untitled_Build/: Untitled_Build.build
cmake/: Version.cmake
cmake/installer/: CMakeLists.txt
controllers/: opccontroller.cpp  opccontroller.h  processcontroller.cpp  processcontroller.h  scannercontroller.cpp  scannercontroller.h  scanstreamingmanager.cpp  scanstreamingmanager.h  slm_worker_manager.cpp  slm_worker_manager.h
docs/: USER_GUIDE.md
io/: buildstyle.cpp  buildstyle.h  file2RTC.cpp  file2RTC.h  readSlices.cpp  readSlices.h  rtccommandblock.cpp  rtccommandblock.h  streamingmarcreader.cpp  streamingmarcreader.h  writeSVG.cpp  writeSVG.h
launcher/: MarcControl.h  MarcControlEntry.cpp  ProjectManager.cpp  ProjectManager.h  main.cpp  main_modern.cpp  mainwindow.cpp  mainwindow.cpp.backup  mainwindow.h  mainwindow.ui
lib/: opcda_i.c
opcserver/: opcserverua.cpp  opcserverua.h
opcserver_lib/: OPCGuids.cpp  opcserver.cpp  opcserver.h  opcserverua.cpp  opcserverua.h
scanner_lib/: Scanner.cpp  Scanner.h  Scanner1.cpp
